w10/day-a/gatekeeper/bad-no-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-no-resources
  namespace: dev
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: bad
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        runAsUser: 1000
