w10/day-a/gatekeeper/bad-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-privileged
  namespace: dev
spec:
  containers:
    - name: bad
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
        runAsNonRoot: true
        runAsUser: 1000
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
