w10/day-a/gatekeeper/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: dev
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        runAsUser: 1000
        allowPrivilegeEscalation: false
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
